# ui_assignment

./: README.md
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  CpuUsage.cpp  CpuUsage.h  MemUsage.cpp  MemUsage.h  StatConnectionHandler.cpp  StatConnectionHandler.h  StatServer.cpp  StatServer.h  main.cpp
